--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+    <meta name="color-scheme" content="dark">
 </head>
 <body>
-    <h1>Add a New Product</h1>
-    <form action="/add-product" method="POST">
+    <h2 class="subtitle">Add a New Product</h>
+    <form class="content" action="/add-product" method="POST">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br>
+        <input placeholder="Title" class="input is-small" type="text" id="title" name="title" required><br>
 
         <label for="description">Description:</label>
-        <textarea id="description" name="description" required></textarea><br>
+        <textarea  placeholder="Description"  class="input is-small" id="description" name="description" required></textarea><br>
 
         <label for="code">Code:</label>
-        <input type="text" id="code" name="code" required><br>
+        <input placeholder="ABC-DEC" class="input is-small" type="text" id="code" name="code" required><br>
 
         <label for="price">Price:</label>
-        <input type="number" id="price" name="price" required><br>
+        <input placeholder="Price" class="input is-small" type="number" id="price" name="price" required><br>
 
-        <label for="stock">Stock:</label>
-        <input type="number" id="stock" name="stock" required><br>
+        <label for="stock">Current stock:</label>
+        <input placeholder="Stock" class="input is-small" type="number" id="stock" name="stock" required><br>
 
         <label for="category">Category:</label>
-        <input type="text" id="category" name="category" required><br>
+        <input placeholder="Stock" class="input is-small" type="text" id="category" name="category" required><br>
 
         <label for="status">Status:</label>
         <input type="checkbox" id="status" name="status"><br>
 
-        <button type="submit">Add Product</button>
+        <button class="button is-small" type="submit">Add Product</button>
     </form>
 </body>
 </html>
