--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -28,7 +28,7 @@
         <input placeholder="Stock" class="input is-small" type="text" id="category" name="category" required><br>
 
         <label for="status">Status:</label>
-        <input type="checkbox" id="status" name="status"><br>
+        <input class="check" type="checkbox" id="status" name="status"><br>
 
         <button class="button is-small" type="submit">Add Product</button>
     </form>
