--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 My Store</p>
+        <p>BE Product Server</p>
     </footer>
 </body>
 </html>
