--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark">
     <title>Real-Time Products</title>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -14,8 +15,8 @@
             productList.innerHTML = products.map(product => `
                 <div class="section other-bar">
                     <li>
-                        <h4>PID: ${product.pid}</h4>
-                        <h5>${product.title} - ${this.price}</h5>
+                        <h4 class="card section"><strong>PID:</strong> ${product.pid}</h4>
+                        <strong>${product.title} - ${product.price}</strong>
                         <p><strong>Stock:</strong> ${product.stock}</p>
                         <p><strong>Motorizable:</strong> ${product.motorizable ? "Yes" : "No"}</p>
                         <p><strong>Lighting:</strong> ${product.lighting ? "Yes" : "No"}</p>
@@ -28,13 +29,13 @@
 </head>
 <body>
     <h2 class="title section">Real-Time Product List</h2>
-    <ul id="productList">
+    <ul class="section" id="productList">
         <!-- Handlebars will render this part initially from the server -->
         {{#each products}}
-            <div class="section other-bar">
+            <div class="other-bar">
                 <li>
-                        <h4>PID: {{this.pid}}</h4>
-                        <h5>{{this.title}} - ${{this.price}}</h5>
+                        <h4 class="card section"><strong>PID:</strong> {{this.pid}}</h4>
+                        <strong>{{this.title}} - ${{this.price}}</strong>
                         <p><strong>Stock:</strong> {{this.stock}}</p>
                         <p><strong>Motorizable:</strong> {{#if this.motorizable}} Yes {{else}} No {{/if}}</p>
                         <p><strong>Lighting:</strong> {{#if this.lighting}} Yes {{else}} No {{/if}}</p>
