--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
     <meta name="color-scheme" content="dark">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
     <h2 class="subtitle">Add a New Product</h>
@@ -19,7 +20,7 @@
         <input placeholder="ABC-DEC" class="input is-small" type="text" id="code" name="code" required><br>
 
         <label for="price">Price:</label>
-        <input placeholder="Price" class="input is-small" type="number" id="price" name="price" required><br>
+        <input placeholder="Price" class="input is-small is-dark" type="number" id="price" name="price" required><br>
 
         <label for="stock">Current stock:</label>
         <input placeholder="Stock" class="input is-small" type="number" id="stock" name="stock" required><br>
