--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         {{{body}}} <!-- This is where the content will be injected -->
     </main>
 
-    <footer>
+    <footer class="content section">
         <p>BE Product Server</p>
     </footer>
 </body>
