--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        {{{body}}} <!-- This is where the content will be injected -->
+        {{{body}}} 
     </main>
 
     <footer class="content section">
