--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -14,7 +14,7 @@
             <ul >
                 {{#each products}}
                     <div class="other-bar">
-                        <li>
+                        <li class="card-columns">
                                 <h4 class="card section"><strong>PID:</strong> {{this.pid}}</h4>
                                 <strong>{{this.title}} - ${{this.price}}</strong>
                                 <p><strong>Stock:</strong> {{this.stock}}</p>
