sent the add and delete product forms to their own route under /forms.

--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2 class="title section">Add a New Product</h2>
-    <form class="content" action="/add-product" method="POST">
+    <form class="content" action="/forms/add-product" method="POST">
         <div class="section">
             <label for="title">Title:</label>
             <input placeholder="Title" class="input is-dark is-small" type="text" id="title" name="title" required><br><br>
